instalacion de fontawesome y ajustes en el formulario de logueo

--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -7,5 +7,64 @@
     flex-direction: column;
     gap: 8px;
     margin-bottom: 1rem;
+
+    &-groupInput {
+      position: relative;
+
+      &-input {
+        width: 100%;
+        background-color: #fff;
+        border-radius: 3px;
+        height: 2.813rem;
+        line-height: 45px;
+        padding: 0 2.5rem 0 0.625rem;
+        transition: 0.3s ease all;
+        border: 2px solid transparent;
+
+        &:focus {
+          border: 2px solid #0075ff;
+          outline: none;
+          box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4);
+        }
+
+        &--error {
+          border: solid 2px #bb2929;
+          // box-shadow: 0 0 5px red;
+        }
+
+        &--success {
+          border: solid 1px #1ed12d;
+        }
+      }
+
+      &-iconValidation {
+        position: absolute;
+        right: 10px;
+        bottom: 14px;
+        font-size: 1rem;
+        display: none;
+      }
+    }
+
+    &-error {
+      color: #bb2929;
+    }
+  }
+
+  &__wrapperRememberMe {
+    display: flex;
+    gap: 8px;
+  }
+
+  &__errorMessagewrapper {
+    height: 2.813rem;
+    line-height: 45px;
+    background-color: #f66060;
+    padding: 0 1rem;
+    border-radius: 3px;
+
+    b {
+      margin-left: 0.625rem;
+    }
   }
 }
